service-loadBalancer-networking/networkpolicy/deny-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: defauly-deny-egress
spec:
  podSelector: {}
  policyTypes: 
    - Egress
