service-loadBalancer-networking/networkpolicy/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-all
spec: 
  policyTypes:
    - Egress
    - Ingress
  podSelector: {}
