service-loadBalancer-networking/networkpolicy/ingress-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: simple-ingress-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: hello
  policyTypes:
  - Ingress
