service-loadBalancer-networking/networkpolicy/multi-policy-port.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: multi-port-egress
spec: 
  podSelector:
    matchLabels: 
      app: hello
  policyTypes:
    - Egress
  egress: 
    - to: 
        - ipBlock:
            cidr: 10.0.0.0/24
      ports:
        - protocol: TCP 
          port: 80 
          endPort: 100
