service-loadBalancer-networking/networkpolicy/netpolicy-ns-podselector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: difference-ns-access
spec:
  podSelector:
    matchLabels:
      app: hello
  ingress: 
    - from: 
        - podSelector:
            matchLabels: 
              app: curl-deployment 
          namespaceSelector: 
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - frontend
